<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/pome"
    tools:context=".Login">


    <LinearLayout
        android:id="@+id/loginView"
        android:layout_width="match_parent"
        android:layout_height="@dimen/loginHeight"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        android:padding="@dimen/loginPadding"
        android:background="@color/colorPrimaryDarkTransparent"
        android:weightSum="6">


        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:hint="@string/username"
            android:inputType="text"
            android:layout_weight="2.5"
            android:textColor="@color/cardview_light_background"/>

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:inputType="textPassword"
            android:layout_weight="2.5"
            android:hint="@string/password"
            android:textColor="@color/cardview_light_background"/>

            <Button
                android:id="@+id/login_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:textColor="@color/cardview_light_background"
                android:layout_weight="0.25"/>

            <Button
                android:id="@+id/signup_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/signup_"
                android:textColor="@color/cardview_light_background"
                android:layout_weight="0.25"/>

            <TextView
                android:id="@+id/forgot_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forgot_password"
                android:clickable="true"
                android:focusable="true"
                android:layout_marginStart="@dimen/signupMargin"
                android:textColor="@color/cardview_light_background"
                android:layout_weight="0.5"/>

    </LinearLayout>

</RelativeLayout>